# BCC

./: .gitignore  README.md
ANN/: README.md
AOC/: README.md
BAN/: Apresentação_BAN.pptx
CAL/: README.md
CGR/: .gitignore  README.md  requirements.txt
COMP/: README.md  resumo_LL(1).md
OCEV/: README.md  algebra.cfg  algebra.py  example.cfg  maze.cfg  maze.py  maze.txt  maze_board.py  n_queens.cfg  n_queens.py  p_queens.cfg  p_queens.py  pyproject.toml  radio.cfg  radio.py
OCEV/galapagos/: __init__.py  cicle.py  config.py  log_handler.py  population.py  selector.py  utils.py
OCEV/galapagos/operators/: crossover.py  mutation.py
OCEV/results/algebra_max/: algebra.txt
OCEV/results/algebra_min/: algebra.txt
OCEV/results/gasp/n16/: p_queens.txt
OCEV/results/gasp/n32/: p_queens.txt
OCEV/results/gasp/n64/: p_queens.txt
OCEV/results/gasp/n8/: p_queens.txt
OCEV/results/gasp/random_replacement/: p_queens.txt
OCEV/results/n_queens_128/: n_queens.txt
OCEV/results/n_queens_16/: n_queens.txt
OCEV/results/n_queens_64/: n_queens.txt
OCEV/results/n_queens_8/: n_queens.txt
OCEV/results/p_n_queens_128/1/: p_queens.txt
OCEV/results/p_n_queens_128/2/: p_queens.txt
OCEV/results/p_n_queens_16/: p_queens.txt
OCEV/results/p_queens_16/: p_queens.txt  temp.txt
OCEV/results/p_queens_32/: p_queens.txt  temp.txt
OCEV/results/p_queens_32_10k/: p_queens.txt  temp.txt
OCEV/results/p_queens_32_2k/: p_queens.txt  temp.txt
OCEV/results/p_queens_64/: p_queens.txt  temp.txt
OCEV/results/p_queens_8/: p_queens.txt  temp.txt
OCEV/results/radio/: radio.txt
(+457 files in other folders)
