[tool.poetry]
authors = ["RicardoStoklosa <stoklosa.ricardo@gmail.com>", "Peter Brendel"]
description = ""
name = "galapagos"
version = "0.1.0"

[tool.poetry.dependencies]
matplotlib = "^3.3.2"
numba = "^0.51.2"
numpy = "^1.19.2"
pathos = "^0.2.6"
pylint = "^2.6.0"
python = "^3.8"
scipy = "^1.5.2"
tqdm = "^4.50.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
